--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Foodie Sylhet</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,500&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>Calorie Station</h1>
+    <section id="banner-section" class="banner">
+        <div class="banner--left half-width">
+            <h1><span>Skip</span> The Diet, <br>
+                Just Eat Healthy <br>
+                With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide
+                healthy and delicious food for you!</p>
+            <a class="banner--left-order link" href="#" target="_blank">Order Food</a>
+        </div>
+        <div class="banner--right half-width">
+            <img src="images/female/lady04.png" alt="banner right image">
+        </div>
+    </section>
 
 </body>
 
