--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
         </div>
     </section>
 
+    <section id="about-section" class="about">
+        <div class="about--left half-width">
+            <img src="images/female/lady08.png" alt="about left image">
+        </div>
+        <div class="about--right half-width">
+            <h2>About <span class="about-me">Us</span></h2>
+            <p>This is Humayun Kabir, an enthusiast of new technologies, strives to learn, and a workaholic in nature. I
+                love to learn and work on robust technologies. I am trying to mention my proficiency in different fields
+                of technology.</p>
+            <a class="about--right-contact link" href="#" target="_blank">Contact Us</a>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
