03: added recipe section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,34 @@
         </div>
     </section>
 
+    <section id="recipe-section" class="recipe">
+        <div class="recipe--top">
+            <h2>My Recipes</h2>
+            <p>Take small portions of dough and give them rounded meatball shape.
+                Flour and fry in a frying pan with plenty of oil. Remove from heat and set aside.</p>
+        </div>
+        <div class="recipe--bottom">
+            <div class="recipe--item">
+                <img src="images/food/food03.jpg" alt="food image">
+                <h3>Chicken <span>Massala</span></h3>
+                <p>Chicken tikka masala is a dish consisting of roasted marinated chicken chunks in spiced curry sauce.
+                    The curry is usually creamy and orange-coloured.</p>
+            </div>
+            <div class="recipe--item">
+                <img src="images/food/food01.jpg" alt="food image">
+                <h3>Kala <span>Bhuna</span></h3>
+                <p>Kala Bhuna is a famous dark and tender dish native to Chittagong prepared with shoulder pieces of
+                    beef and traditional spices; usually served during Mezban.</p>
+            </div>
+            <div class="recipe--item">
+                <img src="images/food/food02.png" alt="food image">
+                <h3>Chillox <span>Burger</span></h3>
+                <p>Chillox is located at Kamal Ataturk Avenue in Banani. They are mainly specialized for Beef and
+                    Chicken Burgers with mild, spicy, very spicy and extreme Naga</p>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
