--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
 
 <body>
 
+    <header>
+        <div>
+            <h4><span>Foodie</span> Nation</h4>
+        </div>
+        <div class="menu-list">
+            <ul>
+                <li><a href="#" target="_blank">Menu</a></li>
+                <li><a href="#" target="_blank">Recipe</a></li>
+                <li><a href="#" target="_blank">Order</a></li>
+                <li><a href="#" target="_blank">Review</a></li>
+                <li><a href="#" target="_blank">Contact</a></li>
+            </ul>
+
+        </div>
+    </header>
+
     <section id="banner-section" class="banner">
         <div class="banner--left half-width">
             <h1><span>Skip</span> The Diet, <br>
@@ -70,6 +86,11 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <h2><span>Foodie</span> Nation</h2>
+        <p>any nutritious substance that people or animals eat to maintain life and growth</p>
+    </footer>
 
 
 </body>
