--- a/index.html
+++ b/index.html
@@ -87,9 +87,25 @@
         </div>
     </section>
 
+    <section id="demography-section" class="demography">
+        <div class="demography-item">
+            <h3>700K</h3>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="demography-item">
+            <h3>2.4M</h3>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="demography-item">
+            <h3>100K</h3>
+            <p>Dribbble Shot Likes</p>
+        </div>
+    </section>
+
+
     <footer class="footer">
-        <h2><span>Foodie</span> Nation</h2>
-        <p>any nutritious substance that people or animals eat to maintain life and growth</p>
+        <h2>Foodie <span>Nation</span></h2>
+        <p>Eat healthy to live healthy. Live healthy to live happy</p>
     </footer>
 
 
